# songcrud1

./: Procfile  db.sqlite3  pyproject.toml  requirements.txt
musicapp/: admin.py  models.py  serializer.py  urls.py  views.py
musicapp/migrations/: 0001_initial.py  0002_rename_song_id_lyrics_song_id.py
songcrud/: settings.py  urls.py
