[tool.poetry]
name = "songcrud"
version = "0.1.0"
description = "this is a zuri project"
authors = ["yuenfu001 <liuyuenfu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
django = "^4.1.2"
djangorestframework = "^3.14.0"
python-decouple = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
